# CChat

./: .gitignore  README.md
.github/workflows/: CICD.yml
ChatServer/: CMakeLists.txt  Dockerfile
ChatServer/src/: CServer.h  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  RedisMgr.cpp  config.ini  const.h  data.h
ChatServer2/: CMakeLists.txt  Dockerfile
ChatServer2/src/: AsioIOContextPool.cpp  AsioIOContextPool.h  CServer.cpp  CSession.cpp  ChatGrpcClient.h  ChatServer.cpp  LogicSystem.cpp  MysqlDao.h  MysqlMgr.cpp  RedisMgr.h  StatusGrpcClient.h  config.ini
Gateserver/: CMakeLists.txt  Dockerfile
Gateserver/src/: CServer.cpp  CServer.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MySqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  const.h
StatusServer/: CMakeLists.txt  Dockerfile
StatusServer/src/: AsioIOContextPool.cpp  AsioIOContextPool.h  ChatGrpcClient.h  ConfigMgr.cpp  ConfigMgr.h  MySqlDao.cpp  MySqlDao.h  MysqlMgr.h  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.pb.cc  message.proto
VarifyServer/: Dockerfile  config.js  config.json  package.json  redis.js  server.js
mysql-init/: init.sql
